@@ -1,0 +1,5 @@
+from pyextrae.common.extrae import *
+
+TracingLibrary = "libpttrace.so"
+
+startTracing( TracingLibrary )
